# android-desktop-mode

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  bindings.py  models.py  screens.py  utils.py
src/android_desktop_mode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_app.py  test_utils.py
